# cross-platform-screenshot-rust

./: Cargo.toml  README.md
assets/screenshot_ui_reference/: manifest.json
docs/: long_screenshot_integration.md
src/: config.rs  dc_control.rs  lib.rs  main.rs  platform.rs  png.rs  raster.rs  res.rs  select_border.rs  select_edit.rs  uibase.rs  win32.rs  windlg.rs
src/common/: gif.rs
src/core/: annotation_model.rs  command_history.rs  long_screenshot_stitcher.rs  mod.rs  state_machine.rs  types.rs
src/longshot/: mod.rs  runtime.rs  session.rs  types.rs  windows.rs
src/windows/: gifdlg.rs  mod.rs  pindlg.rs
tests/: core_tests.rs
tools/: generate_reference_cute_ui_assets.py  generate_reference_exact_ui_assets.py  generate_screenshot_ui_assets.py
