[package]
name = "cross-platform-screenshot-rust"
version = "2.8.8"
edition = "2021"

[dependencies]
gif = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
rust-embed = "8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Storage_Xps",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
